--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <div class="move">
                 <!-- uses solid style -->
                 <div class="shape"><i class="fi flaticon-research"></i></div>
-                <h4><a href="#contact-part">External/Internal Penetration Testing</a></h4>
+                <h4><a href="#contact-part">Advanced Penetration Testing</a></h4>
                 <p>External and internal penetration testing evaluate an organization's security from outside and inside perspectives, identifying weaknesses to enhance cybersecurity posture.</p>
                 <div class="feature_link"> <a href="/services/perimeter-pentest.html" target="_blank">Learn more <i class="fas fa-arrow-right"></i></a> </div>
               </div>
@@ -147,7 +147,7 @@
               <div class="move">
                 <!-- uses solid style -->
                 <div class="shape"><i class="fi flaticon-research"></i></div>
-                <h4><a href="#contact-part">Application Testing</a></h4>
+                <h4><a href="#contact-part">Security Assessment</a></h4>
                 <p>To ensure the security of your applications and data, our team concentrates on locating the weak points of the entire web and mobile applications.</p>
                 <div class="feature_link"> <a href="/services/application-testing.html" target="_blank">Learn more <i class="fas fa-arrow-right"></i></a> </div>
               </div>
