--- a/services/application-testing.html
+++ b/services/application-testing.html
@@ -107,8 +107,8 @@
     <section id="about-part" class="about-wrapper">
       <div class="container">
         <div class="section-title">
-          <span>Pentest Services</span>
-          <h2>Application Testing</h2>
+          <span>Cybersecurity Services</span>
+          <h2>Security Assessment Audit</h2>
         </div>
         <div class="row">
           <div class="col-md-6 order-md-2 align-items-center ">
@@ -118,7 +118,7 @@
             <div>
               <h3>Web Applications</h3>
               <p>
-                Web application testing is the process of evaluating a web-based software application to ensure its functionality, performance, security, and usability meet specified requirements. It involves systematically examining various components and features of the web application to identify defects or areas for improvement, aiming to enhance its quality and reliability before release.
+                Web application testing evaluates a web-based software application to ensure its functionality, performance, security, and usability meet specified requirements. It involves systematically examining various components and features of the web application to identify defects or areas for improvement, aiming to enhance its quality and reliability before release.
               </p>
               <h3>API</h3>
               <p>
@@ -171,7 +171,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <img src="..img/contact-us.webp" alt="contact" class="img-fluid"/>
+            <img src="../img/contact-us.webp" alt="contact" class="img-fluid"/>
             <center><a href="mailto:info@beeklabs.com" class="btn btn-outline-blue" id="btnContactUs">info@beeklabs.com</a></center>
           </div>
         </div>
