--- a/services/index.html
+++ b/services/index.html
@@ -144,7 +144,7 @@
               <div class="move">
                 <!-- uses solid style -->
                 <div class="shape"><i class="fi flaticon-keyword"></i></div>
-                <h4><a href="#contact-part">Social Engineering (SEaaS)</a></h4>
+                <h4><a href="#contact-part">Social Engineering</a></h4>
                 <p>Social Engineering as a service delivers simulated social engineering attacks to assess organizational susceptibility, providing detailed reports with recommendations for enhancing cybersecurity resilience.</p>
                 <div class="feature_link"> <a href="/services/social-engineering.html" target="_blank">Learn more <i class="fas fa-arrow-right"></i></a> </div>
               </div>
