--- a/services/social-engineering.html
+++ b/services/social-engineering.html
@@ -116,7 +116,15 @@
           </div>
           <div class="col-md-7 order-md-1 d-flex align-items-center">
             <div>
-              <p class="text-center">Social engineering testing assesses an organization's vulnerability to human manipulation. <br><br>Testers simulate attacks like phishing emails or phone calls to gauge employees' susceptibility. By identifying weaknesses, organizations can enhance training and implement effective defenses against social engineering threats.</p>
+              <p>Social engineering testing assesses an organization's vulnerability to human manipulation. <br><br>Testers simulate attacks like phishing emails or phone calls to gauge employees' susceptibility. Organizations can enhance training and implement effective defenses against social engineering threats by identifying weaknesses.</p>
+              <h3>Social engineering objectives</h3>
+              <p>The three most important benefits of running a social engineering test on your company are:
+                  <ul>
+                     <li>Identify Vulnerabilities: It helps uncover weaknesses in your human defenses, allowing you to address them before they can be exploited by attackers.</li>
+                     <li>Raise Awareness and Improve Training: It increases employee awareness of social engineering tactics, leading to better security practices and more effective training programs.</li>
+                     <li>Strengthen Incident Response: It tests and refines your incident response strategies, ensuring your team is prepared to handle real threats effectively.</li>
+                  </ul>              
+              </p>
             </div>
           </div>
         </div>
