--- a/services/social-engineering.html
+++ b/services/social-engineering.html
@@ -107,8 +107,8 @@
     <section id="about-part" class="about-wrapper">
       <div class="container">
         <div class="section-title">
-          <span>Social Engineering Services</span>
-          <h2>Social Engineering</h2>
+          <span>Cybersecurity Services</span>
+          <h2>Advance Penetration Testing (Social Engineering)</h2>
         </div>
         <div class="row">
           <div class="col-md-4 order-md-2 d-flex justify-content-center">
@@ -118,13 +118,12 @@
             <div>
               <p>Social engineering testing assesses an organization's vulnerability to human manipulation. <br><br>Testers simulate attacks like phishing emails or phone calls to gauge employees' susceptibility. Organizations can enhance training and implement effective defenses against social engineering threats by identifying weaknesses.</p>
               <h3>Social engineering objectives</h3>
-              <p>The three most important benefits of running a social engineering test on your company are:
+              <p>The three most important benefits of running a social engineering test on your company are:</p>
                   <ul>
                      <li>Identify Vulnerabilities: It helps uncover weaknesses in your human defenses, allowing you to address them before they can be exploited by attackers.</li>
                      <li>Raise Awareness and Improve Training: It increases employee awareness of social engineering tactics, leading to better security practices and more effective training programs.</li>
                      <li>Strengthen Incident Response: It tests and refines your incident response strategies, ensuring your team is prepared to handle real threats effectively.</li>
                   </ul>              
-              </p>
             </div>
           </div>
         </div>
