--- a/services/social-engineering.html
+++ b/services/social-engineering.html
@@ -108,7 +108,7 @@
       <div class="container">
         <div class="section-title">
           <span>Cybersecurity Services</span>
-          <h2>Advance Penetration Testing (Social Engineering)</h2>
+          <h2>Advance Penetration Testing</h2>
         </div>
         <div class="row">
           <div class="col-md-4 order-md-2 d-flex justify-content-center">
@@ -116,6 +116,7 @@
           </div>
           <div class="col-md-7 order-md-1 d-flex align-items-center">
             <div>
+              <H3>Social Engineering</H3>
               <p>Social engineering testing assesses an organization's vulnerability to human manipulation. <br><br>Testers simulate attacks like phishing emails or phone calls to gauge employees' susceptibility. Organizations can enhance training and implement effective defenses against social engineering threats by identifying weaknesses.</p>
               <h3>Social engineering objectives</h3>
               <p>The three most important benefits of running a social engineering test on your company are:</p>
