--- a/services/social-engineering.html
+++ b/services/social-engineering.html
@@ -118,7 +118,7 @@
             <div>
               <H3>Social Engineering</H3>
               <p>Social engineering testing assesses an organization's vulnerability to human manipulation. <br><br>Testers simulate attacks like phishing emails or phone calls to gauge employees' susceptibility. Organizations can enhance training and implement effective defenses against social engineering threats by identifying weaknesses.</p>
-              <h3>Social engineering objectives</h3>
+              <h3>Benefits</h3>
               <p>The three most important benefits of running a social engineering test on your company are:</p>
                   <ul>
                      <li>Identify Vulnerabilities: It helps uncover weaknesses in your human defenses, allowing you to address them before they can be exploited by attackers.</li>
