--- a/services/social-engineering.html
+++ b/services/social-engineering.html
@@ -120,11 +120,16 @@
               <p>Social engineering testing assesses an organization's vulnerability to human manipulation. <br><br>Testers simulate attacks like phishing emails or phone calls to gauge employees' susceptibility. Organizations can enhance training and implement effective defenses against social engineering threats by identifying weaknesses.</p>
               <h3>Benefits</h3>
               <p>The three most important benefits of running a social engineering test on your company are:</p>
-                  <ul>
-                     <li>Identify Vulnerabilities: It helps uncover weaknesses in your human defenses, allowing you to address them before they can be exploited by attackers.</li>
-                     <li>Raise Awareness and Improve Training: It increases employee awareness of social engineering tactics, leading to better security practices and more effective training programs.</li>
-                     <li>Strengthen Incident Response: It tests and refines your incident response strategies, ensuring your team is prepared to handle real threats effectively.</li>
-                  </ul>              
+              <p>
+                Identify Vulnerabilities: It helps uncover weaknesses in your human defenses, allowing you to address them before they can be exploited by attackers.
+              </p>
+              <p>
+                Raise Awareness and Improve Training: It increases employee awareness of social engineering tactics, leading to better security practices and more effective training programs.
+              </p>
+              <p>
+                Strengthen Incident Response: It tests and refines your incident response strategies, ensuring your team is prepared to handle real threats effectively.
+              </p>
+            
             </div>
           </div>
         </div>
