--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="contact-detail social-ac">
                   <h3 class="head-three">Follow us on</h3>
-                  <a href="https://twitter.com/beeklabs"><i class="fab fa-twitter"></i></a> 
+                  <a href="https://x.com/beeklabs"><i class="fab fa-x-twitter"></i></a> 
                 </div>
               </div>
             </div>
@@ -336,10 +336,10 @@
             <i class="fa fa-envelope"> </i>
             </a>
           </li>
-          <!-- Twitter -->
+          <!-- Twitter (X) -->
           <li class="list-inline-item">
-            <a href="https://twitter.com/beeklabs" class="btn-floating btn-tw mx-1 waves-effect waves-light" target="_blank">
-            <i class="fab fa-twitter"> </i>
+            <a href="https://x.com/beeklabs" class="btn-floating btn-github mx-1 waves-effect waves-light" target="_blank">
+            <i class="fab fa-x-twitter"> </i>
             </a>
           </li>
           <!-- Github -->
