--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="shape"><i class="fi flaticon-research"></i></div>
                 <h4><a href="#contact-part">Advanced Penetration Testing</a></h4>
                 <p>External and internal penetration testing evaluate an organization's security from outside and inside perspectives, identifying weaknesses to enhance cybersecurity posture.</p>
-                <div class="feature_link"> <a href="/services/perimeter-pentest.html" target="_blank">Learn more <i class="fas fa-arrow-right"></i></a> </div>
+                <div class="feature_link"> <a href="/services/perimeter-pentest.html">Learn more <i class="fas fa-arrow-right"></i></a> </div>
               </div>
             </div>
           </div>
@@ -137,7 +137,7 @@
                 <div class="shape"><i class="fi flaticon-keyword"></i></div>
                 <h4><a href="#contact-part">Social Engineering</a></h4>
                 <p>Social Engineering as a service delivers simulated social engineering attacks to assess organizational susceptibility, providing detailed reports with recommendations for enhancing cybersecurity resilience.</p>
-                <div class="feature_link"> <a href="/services/social-engineering.html" target="_blank">Learn more <i class="fas fa-arrow-right"></i></a> </div>
+                <div class="feature_link"> <a href="/services/social-engineering.html">Learn more <i class="fas fa-arrow-right"></i></a> </div>
               </div>
             </div>
           </div>
@@ -149,7 +149,7 @@
                 <div class="shape"><i class="fi flaticon-research"></i></div>
                 <h4><a href="#contact-part">Security Assessment</a></h4>
                 <p>To ensure the security of your applications and data, our team concentrates on locating the weak points of the entire web and mobile applications.</p>
-                <div class="feature_link"> <a href="/services/application-testing.html" target="_blank">Learn more <i class="fas fa-arrow-right"></i></a> </div>
+                <div class="feature_link"> <a href="/services/application-testing.html">Learn more <i class="fas fa-arrow-right"></i></a> </div>
               </div>
             </div>
           </div>
