--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="css/compiledbootstrap4.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <!-- Global Privacy Control (GPC)
+    <script>
+        if (navigator.globalPrivacyControl) {
+            console.log("GPC detected, disabling Google Analytics.");
+            window['ga-disable-UA-XXXXXXXXX-X'] = true;
+        } else {
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-XXXXXXXXX-X', 'auto');
+            ga('send', 'pageview');
+        }
+    </script> -->
   </head>
   <body>
     <!-- Pre Loader -->
