--- a/index.html
+++ b/index.html
@@ -373,7 +373,8 @@
       </div>
       <!-- Footer Elements -->
       <!-- Copyright -->
-      <div class="footer-copyright text-center py-3">Copyright © BeekLabs <span id="year"></span>
+      <div class="footer-copyright text-center py-3">Copyright &copy; BeekLabs <span id="year">2024</span>.  
+    <a href="/privacy.html" class="ml-1">Privacy Policy</a></div>
       </div>
       <!--/ End Copyright -->
     </footer>
