--- a/services/about.html
+++ b/services/about.html
@@ -17,15 +17,6 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="/css/compiledbootstrap4.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BZ1MFNQ4GX"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      
-      gtag('config', 'G-BZ1MFNQ4GX');
-    </script>
   </head>
   <body>
     <!-- Pre Loader -->
@@ -92,7 +83,7 @@
                 </div>
                 <div class="contact-detail social-ac">
                   <h3 class="head-three">Follow us on</h3>
-                  <a href="https://twitter.com/beeklabs"><i class="fab fa-twitter"></i></a> 
+                  <a href="https://x.com/beeklabs"><i class="fab fa-x-twitter"></i></a> 
                 </div>
               </div>
             </div>
@@ -189,8 +180,8 @@
           </li>
           <!-- Twitter -->
           <li class="list-inline-item">
-            <a href="https://twitter.com/beeklabs" class="btn-floating btn-tw mx-1 waves-effect waves-light" target="_blank">
-            <i class="fab fa-twitter"> </i>
+            <a href="https://x.com/beeklabs" class="btn-floating btn-github mx-1 waves-effect waves-light" target="_blank">
+            <i class="fab fa-x-twitter"> </i>
             </a>
           </li>
           <!-- Github -->
@@ -209,7 +200,8 @@
       </div>
       <!-- Footer Elements -->
       <!-- Copyright -->
-      <div class="footer-copyright text-center py-3">Copyright © BeekLabs <span id="year"></span>
+      <div class="footer-copyright text-center py-3">Copyright &copy; BeekLabs <span id="year">2024</span>.  
+        <a href="/privacy.html" class="ml-1">Privacy Policy</a></div>
       </div>
       <!--/ End Copyright -->
     </footer>
