--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="contact-detail social-ac">
                   <h3 class="head-three">Follow us on</h3>
-                  <a href="https://twitter.com/beeklabs"><i class="fab fa-twitter"></i></a> 
+                  <a href="https://x.com/beeklabs"><i class="fab fa-x-twitter"></i></a> 
                 </div>
               </div>
             </div>
@@ -187,10 +187,10 @@
             <i class="fa fa-envelope"> </i>
             </a>
           </li>
-          <!-- Twitter -->
+          <!-- Twitter (X) -->
           <li class="list-inline-item">
-            <a href="https://twitter.com/beeklabs" class="btn-floating btn-tw mx-1 waves-effect waves-light" target="_blank">
-            <i class="fab fa-twitter"> </i>
+            <a href="https://x.com/beeklabs" class="btn-floating btn-tw mx-1 waves-effect waves-light" target="_blank">
+            <i class="fab fa-x-twitter"> </i>
             </a>
           </li>
           <!-- Github -->
@@ -209,7 +209,8 @@
       </div>
       <!-- Footer Elements -->
       <!-- Copyright -->
-      <div class="footer-copyright text-center py-3">Copyright © BeekLabs <span id="year"></span>
+      <div class="footer-copyright text-center py-3">Copyright &copy; BeekLabs <span id="year">2024</span>.  
+        <a href="/privacy.html" class="ml-1">Privacy Policy</a></div>
       </div>
       <!--/ End Copyright -->
     </footer>
