--- a/about.html
+++ b/about.html
@@ -126,6 +126,11 @@
                 Transparency, collaboration, and client satisfaction are at the core of our values. We forge strong partnerships with our clients, working closely with you to understand your unique requirements and develop customized solutions.
                 <br> <br>
                 At Beeklabs, our unwavering commitment to excellence empowers you with the knowledge and tools necessary to build a resilient cybersecurity posture. Trust us to be your cybersecurity shield, providing peace of mind and the confidence to navigate the digital landscape securely.
+                <br> <br>
+                If you would like to learn more about our work, please feel free to explore our blog, where we share our methodologies and insights.
+                <center>
+                <a href="https://blog.beeklabs.com/" class="btn btn-outline-blue" id="btnContactUs">BeekLabs Blog</a>
+                </center>             
               </p>
             </div>
           </div>
@@ -238,3 +243,4 @@
     <script src="../js/contact.js"></script>
   </body>
 </html>
+
