--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         <div class="section-title">
           <span>What We Do</span>
           <h2>Our Services</h2>
+          <h4>Please note that all our services are provided on demand. Should you require adherence to specific compliance standards or contractual conditions, we are fully prepared to review and accommodate these requirements in alignment with your organizational needs.</h4>
         </div>
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-4">
@@ -402,3 +403,4 @@
     <script src="js/contact.js"></script>
   </body>
 </html>
+
