--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="col-xs-12 col-lg-6 order-2 order-lg-1">
             <div class="hero-content-left text-white">
               <h1 class="text-white">We are BeekLabs</h1>
-              <p class="lead">Welcome to BeekLabs, your cybersecurity partner.<br>We offer pentesting services and security audits to help protect your company against potential cyber threats, trust us to keep your business safe online!</p>
+              <p class="lead">Welcome to BeekLabs, your cybersecurity partner.<br>Our expert team delivers advanced penetration testing and security audits to identify vulnerabilities before they become threats. With BeekLabs as your cybersecurity partner, you can focus on growing your business while we keep your digital assets safe and secure.</p>
               <a href="#contact-part"  class="fadeinleftbig hidden delay6" data-scroll><button class="btn-simple">Contact with us</button></a>
             </div>
           </div>
@@ -403,4 +403,5 @@
     <script src="js/contact.js"></script>
   </body>
 </html>
+
 
