--- a/index.html
+++ b/index.html
@@ -341,6 +341,43 @@
         </div>
       </div>
     </section>
+
+        <!-- Cybersecurity Blogs Section Start -->
+    <section id="blogs-part" class="blogs-wrapper">
+      <div class="container">
+        <div class="section-title text-center">
+          <h2>Our Cybersecurity Blogs</h2>
+          <p>Discover the latest articles, research, and insights on cybersecurity and penetration testing from our experts.</p>
+        </div>
+        <div class="row">
+
+          <!-- Blog Item 2 -->
+        <div class="col-md-3">
+          <div class="blog-card">
+            <img src="../img/blog1.jpg" alt="StoredXSS" class="img-fluid">
+            <h4 class="mt-3">From Stored XSS to Account Takeover with Limited Characters, CDN, jQuery, and GitHub</h4>
+            <p class="small">August 20, 2025 — BeekLabs Team</p>
+            <p>By extracting the CSRF token and sending a crafted request to update account detail, without requiring the current password, the issue escalated to an account takeover.</p>
+            <a href="https://blog.beeklabs.com/stored-xss-to-account-takeover-jquery-github-cdn/" class="btn btn-outline-purple btn-sm">Read More</a>
+          </div>
+        </div>
+    
+          <!-- Blog Item 1 -->
+          <div class="col-md-3">
+            <div class="blog-card">
+              <img src="../img/blog1.jpg" alt="takeover" class="img-fluid">
+              <h4 class="mt-3">The Undocumented Password Reset That Exposed 1.3M Users and Resulted in Account Takeovers</h4>
+              <p class="small">August 20, 2025 — BeekLabs Team</p>
+              <p>Password reset flows are supposed to be the last safety net for users. Done right, they help recover access securely. Done wrong, they can hand over full control of accounts to attackers.</p>
+              <a href="https://blog.beeklabs.com/undocumented-password-reset-account-takeover/" class="btn btn-outline-purple btn-sm">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Cybersecurity Blogs Section End -->
+
+    
     <footer class="page-footer font-small special-color-dark pt-4" style="padding-left: 0px;">
       <!-- Footer Elements -->
       <div class="container">
@@ -403,5 +440,6 @@
     <script src="js/contact.js"></script>
   </body>
 </html>
+
 
 
