--- a/index.html
+++ b/index.html
@@ -355,8 +355,10 @@
         <div class="col-md-3">
           <div class="blog-card">
             <img src="../img/blog1.jpg" alt="StoredXSS" class="img-fluid">
-            <h4 class="mt-3">From Stored XSS to Account Takeover with Limited Characters, CDN, jQuery, and GitHub</h4>
+            <h4 class="mt-3">From Stored XSS to Account Takeover</h4>
+            <center>
             <a href="https://blog.beeklabs.com/stored-xss-to-account-takeover-jquery-github-cdn/" class="btn btn-outline-purple btn-sm">Read More</a>
+            </center>
           </div>
         </div>
     
@@ -364,7 +366,10 @@
           <div class="col-md-3">
             <div class="blog-card">
               <img src="../img/blog1.jpg" alt="takeover" class="img-fluid">
+              <h4 class="mt-3">Undocumented Password Reset</h4>
+              <center>
               <a href="https://blog.beeklabs.com/undocumented-password-reset-account-takeover/" class="btn btn-outline-purple btn-sm">Read More</a>
+              </center>
             </div>
           </div>
         </div>
@@ -435,6 +440,7 @@
     <script src="js/contact.js"></script>
   </body>
 </html>
+
 
 
 
